# Bachelorprojekt---Nature-inspired-Optimization-Metaheuristics

./: .gitignore  README.md
backend/: pyproject.toml
backend/optimization_framework/: api.py
backend/optimization_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/optimization_framework/algorithms/: ant_optimization_problem.py  mu_plus_lambda_EA.py  one_plus_one_EA.py  simulated_annealing.py
backend/optimization_framework/experiments/: run_experiment.py
backend/optimization_framework/operators/: ga-operators.py  gaoperators.py
backend/optimization_framework/problems/: leadingones.py  onemax.py  tsp.py
backend/output/: latest_run.json
backend/tests/: test_onemax.py
frontend/bachelorproject/: index.html  package-lock.json  package.json
frontend/bachelorproject/src/: App.css  App.tsx  index.css
frontend/bachelorproject/src/components/: ControlPanel.tsx  FitnessChart.tsx  MetricsPanel.tsx  ParametersPanel.tsx  PopulationPanel.tsx
output/: latest_run.json
