[project]
name = "optimization-framework"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "fastapi",
  "uvicorn[standard]",
]

[tool.setuptools.packages.find]
include = ["optimization_framework*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"